@@ -21,13 +21,13 @@ package org.apache.flink.sql.parser.dql;
 import org.apache.calcite.sql.SqlCall;
 import org.apache.calcite.sql.SqlIdentifier;
 import org.apache.calcite.sql.SqlKind;
+import org.apache.calcite.sql.SqlLiteral;
 import org.apache.calcite.sql.SqlNode;
 import org.apache.calcite.sql.SqlOperator;
 import org.apache.calcite.sql.SqlSpecialOperator;
 import org.apache.calcite.sql.SqlWriter;
 import org.apache.calcite.sql.parser.SqlParserPos;
 
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -39,7 +39,16 @@ import java.util.List;
 public class SqlRichDescribeModel extends SqlCall {
 
     public static final SqlSpecialOperator OPERATOR =
-            new SqlSpecialOperator("DESCRIBE MODEL", SqlKind.OTHER);
+            new SqlSpecialOperator("DESCRIBE MODEL", SqlKind.OTHER) {
+                @Override
+                public SqlCall createCall(
+                        SqlLiteral functionQualifier, SqlParserPos pos, SqlNode... operands) {
+                    return new SqlRichDescribeModel(
+                            pos,
+                            (SqlIdentifier) operands[0],
+                            ((SqlLiteral) operands[1]).booleanValue());
+                }
+            };
     protected final SqlIdentifier modelNameIdentifier;
     private final boolean isExtended;
 
@@ -57,7 +66,8 @@ public class SqlRichDescribeModel extends SqlCall {
 
     @Override
     public List<SqlNode> getOperandList() {
-        return Collections.singletonList(modelNameIdentifier);
+        return List.of(
+                modelNameIdentifier, SqlLiteral.createBoolean(isExtended, SqlParserPos.ZERO));
     }
 
     public boolean isExtended() {
