@@ -21,13 +21,13 @@ package org.apache.flink.sql.parser.dql;
 import org.apache.calcite.sql.SqlCall;
 import org.apache.calcite.sql.SqlIdentifier;
 import org.apache.calcite.sql.SqlKind;
+import org.apache.calcite.sql.SqlLiteral;
 import org.apache.calcite.sql.SqlNode;
 import org.apache.calcite.sql.SqlOperator;
 import org.apache.calcite.sql.SqlSpecialOperator;
 import org.apache.calcite.sql.SqlWriter;
 import org.apache.calcite.sql.parser.SqlParserPos;
 
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -37,7 +37,16 @@ import java.util.List;
 public class SqlRichDescribeTable extends SqlCall {
 
     public static final SqlSpecialOperator OPERATOR =
-            new SqlSpecialOperator("DESCRIBE TABLE", SqlKind.DESCRIBE_TABLE);
+            new SqlSpecialOperator("DESCRIBE TABLE", SqlKind.DESCRIBE_TABLE) {
+                @Override
+                public SqlCall createCall(
+                        SqlLiteral functionQualifier, SqlParserPos pos, SqlNode... operands) {
+                    return new SqlRichDescribeTable(
+                            pos,
+                            (SqlIdentifier) operands[0],
+                            ((SqlLiteral) operands[1]).booleanValue());
+                }
+            };
     protected final SqlIdentifier tableNameIdentifier;
     private final boolean isExtended;
 
@@ -55,7 +64,8 @@ public class SqlRichDescribeTable extends SqlCall {
 
     @Override
     public List<SqlNode> getOperandList() {
-        return Collections.singletonList(tableNameIdentifier);
+        return List.of(
+                tableNameIdentifier, SqlLiteral.createBoolean(isExtended, SqlParserPos.ZERO));
     }
 
     public boolean isExtended() {
