@@ -20,6 +20,7 @@ package org.apache.flink.table.planner.functions;
 
 import org.apache.flink.configuration.Configuration;
 import org.apache.flink.table.api.TableException;
+import org.apache.flink.table.api.TableRuntimeException;
 import org.apache.flink.table.api.config.TableConfigOptions;
 import org.apache.flink.table.functions.BuiltInFunctionDefinitions;
 import org.apache.flink.table.types.AbstractDataType;
@@ -32,6 +33,7 @@ import org.apache.flink.types.Row;
 import org.apache.flink.types.bitmap.Bitmap;
 
 import java.math.BigDecimal;
+import java.nio.ByteBuffer;
 import java.time.DateTimeException;
 import java.time.Duration;
 import java.time.Instant;
@@ -74,10 +76,13 @@ import static org.apache.flink.table.api.DataTypes.TIME;
 import static org.apache.flink.table.api.DataTypes.TIMESTAMP;
 import static org.apache.flink.table.api.DataTypes.TIMESTAMP_LTZ;
 import static org.apache.flink.table.api.DataTypes.TINYINT;
+import static org.apache.flink.table.api.DataTypes.UUID;
 import static org.apache.flink.table.api.DataTypes.VARBINARY;
 import static org.apache.flink.table.api.DataTypes.VARCHAR;
+import static org.apache.flink.table.api.DataTypes.VARIANT;
 import static org.apache.flink.table.api.DataTypes.YEAR;
 import static org.apache.flink.table.api.Expressions.$;
+import static org.apache.flink.table.api.Expressions.lit;
 import static org.apache.flink.util.CollectionUtil.entry;
 import static org.apache.flink.util.CollectionUtil.map;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -118,6 +123,18 @@ public class CastFunctionITCase extends BuiltInFunctionTestBase {
 
     private static final Bitmap DEFAULT_BITMAP = Bitmap.fromArray(new int[] {0, 1, 2});
 
+    private static final String DEFAULT_UUID_STRING = "550e8400-e29b-41d4-a716-446655440000";
+    private static final java.util.UUID DEFAULT_UUID =
+            java.util.UUID.fromString(DEFAULT_UUID_STRING);
+    private static final byte[] DEFAULT_UUID_BYTES = uuidBytes(DEFAULT_UUID);
+
+    private static byte[] uuidBytes(java.util.UUID uuid) {
+        return ByteBuffer.allocate(16)
+                .putLong(uuid.getMostSignificantBits())
+                .putLong(uuid.getLeastSignificantBits())
+                .array();
+    }
+
     @Override
     Configuration getConfiguration() {
         return super.getConfiguration().set(TableConfigOptions.LOCAL_TIME_ZONE, TEST_TZ.getId());
@@ -132,7 +149,591 @@ public class CastFunctionITCase extends BuiltInFunctionTestBase {
         specs.addAll(numericBounds());
         specs.addAll(constructedTypes());
         specs.addAll(bitmapCasts());
+        specs.addAll(variantCasts());
+        specs.addAll(uuidCasts());
         return specs.stream();
+    }
+
+    private static List<TestSetSpec> variantCasts() {
+        final List<TestSetSpec> specs = new ArrayList<>();
+        specs.addAll(variantPrimitiveCasts());
+        specs.addAll(variantArrayCasts());
+        specs.addAll(variantRowCasts());
+        specs.addAll(variantMapCasts());
+        return specs;
+    }
+
+    private static List<TestSetSpec> variantPrimitiveCasts() {
+        return List.of(
+                TestSetSpec.forExpression("Cast a VARIANT produced by parseJson() to a primitive")
+                        .onFieldsWithData("unused")
+                        .andDataTypes(STRING())
+                        // An integer converts to any integer target while the value stays in
+                        // range, and to FLOAT or DOUBLE which are approximate by definition.
+                        .testResult(
+                                lit("42").parseJson().cast(TINYINT()),
+                                "CAST(PARSE_JSON('42') AS TINYINT)",
+                                (byte) 42,
+                                TINYINT().notNull())
+                        .testResult(
+                                lit("42").parseJson().cast(SMALLINT()),
+                                "CAST(PARSE_JSON('42') AS SMALLINT)",
+                                (short) 42,
+                                SMALLINT().notNull())
+                        .testResult(
+                                lit("42").parseJson().cast(INT()),
+                                "CAST(PARSE_JSON('42') AS INT)",
+                                42,
+                                INT().notNull())
+                        .testResult(
+                                lit("42").parseJson().cast(BIGINT()),
+                                "CAST(PARSE_JSON('42') AS BIGINT)",
+                                42L,
+                                BIGINT().notNull())
+                        .testResult(
+                                lit("42").parseJson().cast(FLOAT()),
+                                "CAST(PARSE_JSON('42') AS FLOAT)",
+                                42.0f,
+                                FLOAT().notNull())
+                        .testResult(
+                                lit("42").parseJson().cast(DOUBLE()),
+                                "CAST(PARSE_JSON('42') AS DOUBLE)",
+                                42.0d,
+                                DOUBLE().notNull())
+                        // An out-of-range value is rejected rather than wrapped.
+                        .testResult(
+                                lit("1000").parseJson().cast(SMALLINT()),
+                                "CAST(PARSE_JSON('1000') AS SMALLINT)",
+                                (short) 1000,
+                                SMALLINT().notNull())
+                        .testTableApiRuntimeError(
+                                lit("1000").parseJson().cast(TINYINT()), "overflowed")
+                        .testSqlRuntimeError("CAST(PARSE_JSON('1000') AS TINYINT)", "overflowed")
+                        .testResult(
+                                lit("1000").parseJson().tryCast(TINYINT()),
+                                "TRY_CAST(PARSE_JSON('1000') AS TINYINT)",
+                                null,
+                                TINYINT())
+                        // A decimal reaches an integer target when it is already integral.
+                        .testResult(
+                                lit("7.0").parseJson().cast(INT()),
+                                "CAST(PARSE_JSON('7.0') AS INT)",
+                                7,
+                                INT().notNull())
+                        // A fractional value is rejected, since converting would drop digits.
+                        .testTableApiRuntimeError(
+                                lit("123.456").parseJson().cast(INT()), "lose precision")
+                        .testResult(
+                                lit("123.456").parseJson().tryCast(INT()),
+                                "TRY_CAST(PARSE_JSON('123.456') AS INT)",
+                                null,
+                                INT())
+                        // A DECIMAL target has to hold the value exactly.
+                        .testResult(
+                                lit("123.456").parseJson().cast(DECIMAL(6, 3)),
+                                "CAST(PARSE_JSON('123.456') AS DECIMAL(6, 3))",
+                                new BigDecimal("123.456"),
+                                DECIMAL(6, 3).notNull())
+                        .testTableApiRuntimeError(
+                                lit("123.456").parseJson().cast(DECIMAL(6, 2)), "lose precision")
+                        .testResult(
+                                lit("123.456").parseJson().tryCast(DECIMAL(6, 2)),
+                                "TRY_CAST(PARSE_JSON('123.456') AS DECIMAL(6, 2))",
+                                null,
+                                DECIMAL(6, 2))
+                        .testTableApiRuntimeError(
+                                lit("123.456").parseJson().cast(DECIMAL(5, 3)), "overflowed")
+                        .testResult(
+                                lit("123.456").parseJson().tryCast(DECIMAL(5, 3)),
+                                "TRY_CAST(PARSE_JSON('123.456') AS DECIMAL(5, 3))",
+                                null,
+                                DECIMAL(5, 3))
+                        // An integer is exact, so it reaches a DECIMAL that has room for it.
+                        .testResult(
+                                lit("42").parseJson().cast(DECIMAL(5, 2)),
+                                "CAST(PARSE_JSON('42') AS DECIMAL(5, 2))",
+                                new BigDecimal("42.00"),
+                                DECIMAL(5, 2).notNull())
+                        // A decimal reaches an approximate target, where losing digits is expected.
+                        .testResult(
+                                lit("123.456").parseJson().cast(FLOAT()),
+                                "CAST(PARSE_JSON('123.456') AS FLOAT)",
+                                123.456f,
+                                FLOAT().notNull())
+                        .testResult(
+                                lit("123.456").parseJson().cast(DOUBLE()),
+                                "CAST(PARSE_JSON('123.456') AS DOUBLE)",
+                                123.456d,
+                                DOUBLE().notNull())
+                        // A magnitude the target cannot represent is still rejected.
+                        .testTableApiRuntimeError(
+                                lit("1e40").parseJson().cast(FLOAT()), "overflowed")
+                        .testResult(
+                                lit("1e40").parseJson().tryCast(FLOAT()),
+                                "TRY_CAST(PARSE_JSON('1e40') AS FLOAT)",
+                                null,
+                                FLOAT())
+                        .testResult(
+                                lit("1e20").parseJson().cast(DOUBLE()),
+                                "CAST(PARSE_JSON('1e20') AS DOUBLE)",
+                                1e20,
+                                DOUBLE().notNull())
+                        .testResult(
+                                lit("true").parseJson().cast(BOOLEAN()),
+                                "CAST(PARSE_JSON('true') AS BOOLEAN)",
+                                true,
+                                BOOLEAN().notNull())
+                        // CAST returns the raw scalar value (string unquoted)
+                        .testResult(
+                                lit("\"foo\"").parseJson().cast(STRING()),
+                                "CAST(PARSE_JSON('\"foo\"') AS STRING)",
+                                "foo",
+                                STRING().notNull())
+                        .testResult(
+                                lit("123.456").parseJson().cast(STRING()),
+                                "CAST(PARSE_JSON('123.456') AS STRING)",
+                                "123.456",
+                                STRING().notNull())
+                        // The rendering matches a regular cast of the stored kind, so a boolean
+                        // becomes TRUE rather than the JSON true.
+                        .testResult(
+                                lit("true").parseJson().cast(STRING()),
+                                "CAST(PARSE_JSON('true') AS STRING)",
+                                "TRUE",
+                                STRING().notNull())
+                        // An object or array has no scalar form, so it renders like a regular ARRAY
+                        // or MAP to string cast, with strings unquoted at every depth.
+                        .testResult(
+                                lit("[\"a\", \"b\"]").parseJson().cast(STRING()),
+                                "CAST(PARSE_JSON('[\"a\", \"b\"]') AS STRING)",
+                                "[a, b]",
+                                STRING().notNull())
+                        .testResult(
+                                lit("[\"a\", \"b\"]").parseJson().tryCast(STRING()),
+                                "TRY_CAST(PARSE_JSON('[\"a\", \"b\"]') AS STRING)",
+                                "[a, b]",
+                                STRING())
+                        .testResult(
+                                lit("{\"a\": 1}").parseJson().cast(STRING()),
+                                "CAST(PARSE_JSON('{\"a\": 1}') AS STRING)",
+                                "{a=1}",
+                                STRING().notNull())
+                        .testResult(
+                                lit("{\"a\": 1}").parseJson().tryCast(STRING()),
+                                "TRY_CAST(PARSE_JSON('{\"a\": 1}') AS STRING)",
+                                "{a=1}",
+                                STRING())
+                        // A bounded CHAR/VARCHAR target trims a longer value, and CHAR pads a
+                        // shorter one to its fixed width, the same as a regular cast into it.
+                        .testResult(
+                                lit("\"ab\"").parseJson().cast(VARCHAR(3)),
+                                "CAST(PARSE_JSON('\"ab\"') AS VARCHAR(3))",
+                                "ab",
+                                VARCHAR(3).notNull())
+                        .testResult(
+                                lit("\"foobar\"").parseJson().cast(VARCHAR(3)),
+                                "CAST(PARSE_JSON('\"foobar\"') AS VARCHAR(3))",
+                                "foo",
+                                VARCHAR(3).notNull())
+                        .testResult(
+                                lit("\"foobar\"").parseJson().tryCast(VARCHAR(3)),
+                                "TRY_CAST(PARSE_JSON('\"foobar\"') AS VARCHAR(3))",
+                                "foo",
+                                VARCHAR(3))
+                        .testResult(
+                                lit("\"abc\"").parseJson().cast(CHAR(3)),
+                                "CAST(PARSE_JSON('\"abc\"') AS CHAR(3))",
+                                "abc",
+                                CHAR(3).notNull())
+                        .testResult(
+                                lit("\"abcdef\"").parseJson().cast(CHAR(3)),
+                                "CAST(PARSE_JSON('\"abcdef\"') AS CHAR(3))",
+                                "abc",
+                                CHAR(3).notNull())
+                        .testResult(
+                                lit("\"ab\"").parseJson().cast(CHAR(5)),
+                                "CAST(PARSE_JSON('\"ab\"') AS CHAR(5))",
+                                "ab   ",
+                                CHAR(5).notNull())
+                        .testResult(
+                                lit("\"ab\"").parseJson().tryCast(CHAR(5)),
+                                "TRY_CAST(PARSE_JSON('\"ab\"') AS CHAR(5))",
+                                "ab   ",
+                                CHAR(5))
+                        // A nested variant null renders as NULL and a nested container renders in
+                        // full, with strings unquoted, like a regular ARRAY or MAP to string cast.
+                        .testResult(
+                                lit("[\"a\", null, 1]").parseJson().cast(STRING()),
+                                "CAST(PARSE_JSON('[\"a\", null, 1]') AS STRING)",
+                                "[a, NULL, 1]",
+                                STRING().notNull())
+                        .testResult(
+                                lit("{\"k\": [\"a\", \"b\"]}").parseJson().cast(STRING()),
+                                "CAST(PARSE_JSON('{\"k\": [\"a\", \"b\"]}') AS STRING)",
+                                "{k=[a, b]}",
+                                STRING().notNull())
+                        // A container renders in full and is then trimmed to a bounded target, the
+                        // same as any other value longer than the target.
+                        .testResult(
+                                lit("[1, 2, 3]").parseJson().cast(VARCHAR(5)),
+                                "CAST(PARSE_JSON('[1, 2, 3]') AS VARCHAR(5))",
+                                "[1, 2",
+                                VARCHAR(5).notNull())
+                        // A variant holding a JSON null casts to SQL NULL, not to the text 'null'.
+                        // The length of that text must not be checked against the target either.
+                        .testResult(
+                                lit("null").tryParseJson().cast(STRING()),
+                                "CAST(TRY_PARSE_JSON('null') AS STRING)",
+                                null,
+                                STRING())
+                        .testResult(
+                                lit("null").parseJson().tryCast(STRING()),
+                                "TRY_CAST(PARSE_JSON('null') AS STRING)",
+                                null,
+                                STRING())
+                        .testResult(
+                                lit("null").tryParseJson().cast(CHAR(2)),
+                                "CAST(TRY_PARSE_JSON('null') AS CHAR(2))",
+                                null,
+                                CHAR(2))
+                        .testResult(
+                                lit("null").parseJson().tryCast(VARCHAR(2)),
+                                "TRY_CAST(PARSE_JSON('null') AS VARCHAR(2))",
+                                null,
+                                VARCHAR(2))
+                        // TRY_CAST of a value whose kind does not match the target returns NULL
+                        .testResult(
+                                lit("\"foo\"").parseJson().tryCast(INT()),
+                                "TRY_CAST(PARSE_JSON('\"foo\"') AS INT)",
+                                null,
+                                INT())
+                        // A variant that stores a JSON null casts to SQL NULL when the target is
+                        // nullable: a nullable variant source, or TRY_CAST which forces nullable.
+                        .testResult(
+                                lit("null").tryParseJson().cast(INT()),
+                                "CAST(TRY_PARSE_JSON('null') AS INT)",
+                                null,
+                                INT())
+                        .testResult(
+                                lit("null").parseJson().tryCast(BOOLEAN()),
+                                "TRY_CAST(PARSE_JSON('null') AS BOOLEAN)",
+                                null,
+                                BOOLEAN())
+                        // A nullable variant with a concrete value still casts normally.
+                        .testResult(
+                                lit("42").tryParseJson().cast(TINYINT()),
+                                "CAST(TRY_PARSE_JSON('42') AS TINYINT)",
+                                (byte) 42,
+                                TINYINT()));
+    }
+
+    private static List<TestSetSpec> variantArrayCasts() {
+        return List.of(
+                TestSetSpec.forExpression("Cast a VARIANT produced by parseJson() to an ARRAY")
+                        .onFieldsWithData("unused")
+                        .andDataTypes(STRING())
+                        // ARRAY: each element casts by the same VARIANT-to-element rule.
+                        .testResult(
+                                lit("[1, 2, 3]").parseJson().cast(ARRAY(INT())),
+                                "CAST(PARSE_JSON('[1, 2, 3]') AS ARRAY<INT>)",
+                                new Integer[] {1, 2, 3},
+                                ARRAY(INT()).notNull())
+                        // an approximate leaf takes any numeric kind
+                        .testResult(
+                                lit("[1, 2, 3]").parseJson().cast(ARRAY(DOUBLE())),
+                                "CAST(PARSE_JSON('[1, 2, 3]') AS ARRAY<DOUBLE>)",
+                                new Double[] {1.0, 2.0, 3.0},
+                                ARRAY(DOUBLE()).notNull())
+                        // each element renders to string like the scalar cast
+                        .testResult(
+                                lit("[1, 2, 3]").parseJson().cast(ARRAY(STRING())),
+                                "CAST(PARSE_JSON('[1, 2, 3]') AS ARRAY<STRING>)",
+                                new String[] {"1", "2", "3"},
+                                ARRAY(STRING()).notNull())
+                        // a heterogeneous array renders every element to string
+                        .testResult(
+                                lit("[1, \"a\", 2, \"b\"]").parseJson().cast(ARRAY(STRING())),
+                                "CAST(PARSE_JSON('[1, \"a\", 2, \"b\"]') AS ARRAY<STRING>)",
+                                new String[] {"1", "a", "2", "b"},
+                                ARRAY(STRING()).notNull())
+                        .testResult(
+                                lit("[]").parseJson().cast(ARRAY(INT())),
+                                "CAST(PARSE_JSON('[]') AS ARRAY<INT>)",
+                                new Integer[] {},
+                                ARRAY(INT()).notNull())
+                        // a VARIANT null element maps to SQL NULL for a nullable element type
+                        .testResult(
+                                lit("[1, null, 3]").parseJson().cast(ARRAY(INT())),
+                                "CAST(PARSE_JSON('[1, null, 3]') AS ARRAY<INT>)",
+                                new Integer[] {1, null, 3},
+                                ARRAY(INT()).notNull())
+                        // a VARIANT null element fails a NOT NULL element type
+                        .testTableApiRuntimeError(
+                                lit("[1, null, 3]").parseJson().cast(ARRAY(INT().notNull())),
+                                "NOT NULL element type")
+                        .testSqlRuntimeError(
+                                "CAST(PARSE_JSON('[1, null, 3]') AS ARRAY<INT NOT NULL>)",
+                                "NOT NULL element type")
+                        // a stored string is never parsed into an integer
+                        .testTableApiRuntimeError(
+                                lit("[\"1\", \"2\"]").parseJson().cast(ARRAY(INT())),
+                                "does not change the type")
+                        .testSqlRuntimeError(
+                                "CAST(PARSE_JSON('[\"1\", \"2\"]') AS ARRAY<INT>)",
+                                "does not change the type")
+                        .testResult(
+                                lit("[\"1\", \"2\"]").parseJson().tryCast(ARRAY(INT())),
+                                "TRY_CAST(PARSE_JSON('[\"1\", \"2\"]') AS ARRAY<INT>)",
+                                null,
+                                ARRAY(INT()))
+                        // a heterogeneous array fails on the first element that is not an integer
+                        .testTableApiRuntimeError(
+                                lit("[1, \"a\", 2, \"b\"]").parseJson().cast(ARRAY(INT())),
+                                "does not change the type")
+                        // a fractional element cannot narrow to INT without dropping digits
+                        .testTableApiRuntimeError(
+                                lit("[1.23, 2.45, 3.67]").parseJson().cast(ARRAY(INT())),
+                                "lose precision")
+                        .testSqlRuntimeError(
+                                "CAST(PARSE_JSON('[1.23, 2.45, 3.67]') AS ARRAY<INT>)",
+                                "lose precision")
+                        // TRY_CAST swallows the failure and returns NULL for the whole array
+                        .testResult(
+                                lit("[1.23, 2.45, 3.67]").parseJson().tryCast(ARRAY(INT())),
+                                "TRY_CAST(PARSE_JSON('[1.23, 2.45, 3.67]') AS ARRAY<INT>)",
+                                null,
+                                ARRAY(INT()))
+                        // an object is not an array
+                        .testTableApiRuntimeError(
+                                lit("{\"id\": 7, \"name\": \"ada\", \"active\": true}")
+                                        .parseJson()
+                                        .cast(ARRAY(INT())),
+                                "requires an array")
+                        // ARRAY<VARIANT> shreds one level and keeps the elements as variants, which
+                        // then cast back to INT unchanged
+                        .testResult(
+                                lit("[1, 2, 3]")
+                                        .parseJson()
+                                        .cast(ARRAY(VARIANT()))
+                                        .cast(ARRAY(INT())),
+                                "CAST(CAST(PARSE_JSON('[1, 2, 3]') AS ARRAY<VARIANT>) AS ARRAY<INT>)",
+                                new Integer[] {1, 2, 3},
+                                ARRAY(INT()).notNull())
+                        // the recursion composes for a nested array of arrays
+                        .testResult(
+                                lit("[[1, 2], [3]]").parseJson().cast(ARRAY(ARRAY(INT()))),
+                                "CAST(PARSE_JSON('[[1, 2], [3]]') AS ARRAY<ARRAY<INT>>)",
+                                new Integer[][] {{1, 2}, {3}},
+                                ARRAY(ARRAY(INT())).notNull())
+                        // a top-level VARIANT null casts to SQL NULL for a nullable target
+                        .testResult(
+                                lit("null").tryParseJson().cast(ARRAY(INT())),
+                                "CAST(TRY_PARSE_JSON('null') AS ARRAY<INT>)",
+                                null,
+                                ARRAY(INT()))
+                        // an element with no variant counterpart is rejected at validation
+                        .testTableApiValidationError(
+                                lit("[1]").parseJson().cast(ARRAY(INTERVAL(MONTH()))),
+                                "Unsupported cast"));
+    }
+
+    private static List<TestSetSpec> uuidCasts() {
+        return Arrays.asList(
+                // A string or a binary value casts to a UUID.
+                CastTestSpecBuilder.testCastTo(UUID())
+                        .fromCase(STRING(), DEFAULT_UUID_STRING, DEFAULT_UUID)
+                        .fromCase(BYTES(), DEFAULT_UUID_BYTES, DEFAULT_UUID)
+                        .fromCase(STRING(), null, null)
+                        .build(),
+                // A numeric source, and a fixed BINARY of a width other than 16, are rejected
+                // during validation rather than at runtime.
+                CastTestSpecBuilder.testCastTo(UUID())
+                        .failValidation(INT(), DEFAULT_POSITIVE_INT)
+                        .failValidation(BINARY(10), new byte[10])
+                        .build(),
+                // A malformed string or a binary value of the wrong length fails CAST at runtime
+                // and yields NULL for TRY_CAST.
+                TestSetSpec.forExpression("Cast a malformed value to UUID")
+                        .onFieldsWithData("not-a-uuid", new byte[] {1, 2, 3})
+                        .andDataTypes(STRING(), BYTES())
+                        .testTableApiRuntimeError(
+                                $("f0").cast(UUID()),
+                                TableRuntimeException.class,
+                                "32 hexadecimal digits")
+                        .testSqlRuntimeError(
+                                "CAST(f0 AS UUID)",
+                                TableRuntimeException.class,
+                                "32 hexadecimal digits")
+                        .testResult($("f0").tryCast(UUID()), "TRY_CAST(f0 AS UUID)", null, UUID())
+                        .testTableApiRuntimeError(
+                                $("f1").cast(UUID()),
+                                TableRuntimeException.class,
+                                "requires exactly 16 bytes")
+                        .testSqlRuntimeError(
+                                "CAST(f1 AS UUID)",
+                                TableRuntimeException.class,
+                                "requires exactly 16 bytes")
+                        .testResult($("f1").tryCast(UUID()), "TRY_CAST(f1 AS UUID)", null, UUID()),
+                // A UUID casts to its canonical string.
+                CastTestSpecBuilder.testCastTo(STRING())
+                        .fromCase(UUID(), DEFAULT_UUID, DEFAULT_UUID_STRING)
+                        .fromCase(UUID(), null, null)
+                        .build(),
+                // A UUID casts to its 16-byte encoding.
+                CastTestSpecBuilder.testCastTo(BYTES())
+                        .fromCase(UUID(), DEFAULT_UUID, DEFAULT_UUID_BYTES)
+                        .fromCase(UUID(), null, null)
+                        .build());
+    }
+
+    private static List<TestSetSpec> variantRowCasts() {
+        final String obj = "{\"id\": 7, \"name\": \"ada\", \"active\": true}";
+        final String objNull = "{\"id\": 7, \"name\": null}";
+        final String nested =
+                "{\"user\": {\"id\": 1, \"since\": \"2020-01-01\"}, \"tags\": [\"x\", \"y\"]}";
+        return List.of(
+                TestSetSpec.forExpression("Cast a VARIANT produced by parseJson() to a ROW")
+                        .onFieldsWithData("unused")
+                        .andDataTypes(STRING())
+                        // ROW: fields match by name, order is free
+                        .testResult(
+                                lit(obj).parseJson()
+                                        .cast(ROW(FIELD("id", INT()), FIELD("name", STRING()))),
+                                "CAST(PARSE_JSON('" + obj + "') AS ROW<`id` INT, `name` STRING>)",
+                                Row.of(7, "ada"),
+                                ROW(FIELD("id", INT()), FIELD("name", STRING())).notNull())
+                        .testResult(
+                                lit(obj).parseJson()
+                                        .cast(ROW(FIELD("name", STRING()), FIELD("id", INT()))),
+                                "CAST(PARSE_JSON('" + obj + "') AS ROW<`name` STRING, `id` INT>)",
+                                Row.of("ada", 7),
+                                ROW(FIELD("name", STRING()), FIELD("id", INT())).notNull())
+                        // a field absent from the object fails the cast
+                        .testSqlRuntimeError(
+                                "CAST(PARSE_JSON('"
+                                        + obj
+                                        + "') AS ROW<`id` INT, `non-existing` STRING>)",
+                                TableRuntimeException.class,
+                                "is not present in the VARIANT")
+                        // a field present but set to a variant null maps to SQL NULL when nullable
+                        .testResult(
+                                lit(objNull)
+                                        .parseJson()
+                                        .cast(ROW(FIELD("id", INT()), FIELD("name", STRING()))),
+                                "CAST(PARSE_JSON('"
+                                        + objNull
+                                        + "') AS ROW<`id` INT, `name` STRING>)",
+                                Row.of(7, null),
+                                ROW(FIELD("id", INT()), FIELD("name", STRING())).notNull())
+                        // and fails when that field is NOT NULL
+                        .testSqlRuntimeError(
+                                "CAST(PARSE_JSON('"
+                                        + objNull
+                                        + "') AS ROW<`id` INT, `name` STRING NOT NULL>)",
+                                TableRuntimeException.class,
+                                "does not accept NULL")
+                        // extra object fields are dropped, so the row is a projection
+                        .testResult(
+                                lit(obj).parseJson().cast(ROW(FIELD("id", INT()))),
+                                "CAST(PARSE_JSON('" + obj + "') AS ROW<`id` INT>)",
+                                Row.of(7),
+                                ROW(FIELD("id", INT())).notNull())
+                        // an array is not an object
+                        .testTableApiRuntimeError(
+                                lit("[1, 2, 3]").parseJson().cast(ROW(FIELD("id", INT()))),
+                                "requires an object")
+                        // ROW<VARIANT> shreds one level, keeping each field a variant that then
+                        // casts back unchanged
+                        .testResult(
+                                lit(obj).parseJson()
+                                        .cast(ROW(FIELD("id", VARIANT()), FIELD("name", VARIANT())))
+                                        .cast(ROW(FIELD("id", INT()), FIELD("name", STRING()))),
+                                "CAST(CAST(PARSE_JSON('"
+                                        + obj
+                                        + "') AS ROW<`id` VARIANT, `name` VARIANT>)"
+                                        + " AS ROW<`id` INT, `name` STRING>)",
+                                Row.of(7, "ada"),
+                                ROW(FIELD("id", INT()), FIELD("name", STRING())).notNull())
+                        // a variant null field is kept as a variant null, so casting it back to a
+                        // concrete nullable type yields SQL NULL
+                        .testResult(
+                                lit(objNull)
+                                        .parseJson()
+                                        .cast(ROW(FIELD("id", VARIANT()), FIELD("name", VARIANT())))
+                                        .cast(ROW(FIELD("id", INT()), FIELD("name", STRING()))),
+                                "CAST(CAST(PARSE_JSON('"
+                                        + objNull
+                                        + "') AS ROW<`id` VARIANT, `name` VARIANT>)"
+                                        + " AS ROW<`id` INT, `name` STRING>)",
+                                Row.of(7, null),
+                                ROW(FIELD("id", INT()), FIELD("name", STRING())).notNull())
+                        // the recursion composes for nested rows and arrays
+                        .testResult(
+                                lit(nested)
+                                        .parseJson()
+                                        .cast(
+                                                ROW(
+                                                        FIELD(
+                                                                "user",
+                                                                ROW(
+                                                                        FIELD("id", INT()),
+                                                                        FIELD("since", STRING()))),
+                                                        FIELD("tags", ARRAY(STRING())))),
+                                "CAST(PARSE_JSON('"
+                                        + nested
+                                        + "') AS ROW<`user` ROW<`id` INT, `since` STRING>,"
+                                        + " `tags` ARRAY<STRING>>)",
+                                Row.of(Row.of(1, "2020-01-01"), new String[] {"x", "y"}),
+                                ROW(
+                                                FIELD(
+                                                        "user",
+                                                        ROW(
+                                                                FIELD("id", INT()),
+                                                                FIELD("since", STRING()))),
+                                                FIELD("tags", ARRAY(STRING())))
+                                        .notNull()));
+    }
+
+    private static List<TestSetSpec> variantMapCasts() {
+        final String obj = "{\"id\": 7, \"name\": \"ada\", \"active\": true}";
+        final String objNull = "{\"id\": 7, \"email\": null}";
+        final String mixed = "{\"a\": 1, \"b\": \"x\"}";
+        return List.of(
+                TestSetSpec.forExpression("Cast a VARIANT produced by parseJson() to a MAP")
+                        .onFieldsWithData("unused")
+                        .andDataTypes(STRING())
+                        // MAP: each field name becomes a key, each value casts to V
+                        .testResult(
+                                lit(obj).parseJson().cast(MAP(STRING(), STRING())),
+                                "CAST(PARSE_JSON('" + obj + "') AS MAP<STRING, STRING>)",
+                                map(
+                                        entry("id", "7"),
+                                        entry("name", "ada"),
+                                        entry("active", "TRUE")),
+                                MAP(STRING(), STRING()).notNull())
+                        .testResult(
+                                lit("{}").parseJson().cast(MAP(STRING(), INT())),
+                                "CAST(PARSE_JSON('{}') AS MAP<STRING, INT>)",
+                                map(),
+                                MAP(STRING(), INT()).notNull())
+                        // a value present but set to a variant null maps to SQL NULL when nullable
+                        .testResult(
+                                lit(objNull).parseJson().cast(MAP(STRING(), STRING())),
+                                "CAST(PARSE_JSON('" + objNull + "') AS MAP<STRING, STRING>)",
+                                map(entry("id", "7"), entry("email", null)),
+                                MAP(STRING(), STRING()).notNull())
+                        // and fails when the value type is NOT NULL
+                        .testTableApiRuntimeError(
+                                lit(objNull).parseJson().cast(MAP(STRING(), STRING().notNull())),
+                                "NOT NULL map value type")
+                        // a value that is not an integer fails the cast
+                        .testTableApiRuntimeError(
+                                lit(mixed).parseJson().cast(MAP(STRING(), INT())),
+                                "does not change the type")
+                        // a non-string map key is rejected at validation
+                        .testTableApiValidationError(
+                                lit(obj).parseJson().cast(MAP(INT(), STRING())),
+                                "Unsupported cast"));
     }
 
     private static List<TestSetSpec> allTypesBasic() {
@@ -1269,7 +1870,7 @@ public class CastFunctionITCase extends BuiltInFunctionTestBase {
     }
 
     private static List<TestSetSpec> decimalCasts() {
-        return Collections.singletonList(
+        return List.of(
                 CastTestSpecBuilder.testCastTo(DECIMAL(8, 4))
                         .fromCase(STRING(), null, null)
                         // rounding
@@ -1312,6 +1913,14 @@ public class CastFunctionITCase extends BuiltInFunctionTestBase {
                         .build(),
                 CastTestSpecBuilder.testCastTo(FLOAT())
                         .fromCase(DOUBLE(), -1.7976931348623157E308d, Float.NEGATIVE_INFINITY)
+                        .fromCase(STRING(), "NaN", Float.NaN)
+                        .fromCase(STRING(), "Infinity", Float.POSITIVE_INFINITY)
+                        .fromCase(STRING(), "-Infinity", Float.NEGATIVE_INFINITY)
+                        .build(),
+                CastTestSpecBuilder.testCastTo(DOUBLE())
+                        .fromCase(STRING(), "NaN", Double.NaN)
+                        .fromCase(STRING(), "Infinity", Double.POSITIVE_INFINITY)
+                        .fromCase(STRING(), "-Infinity", Double.NEGATIVE_INFINITY)
                         .build(),
                 CastTestSpecBuilder.testCastTo(DECIMAL(38, 0))
                         .fromCase(
